<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_acara"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="Search"/>

    <item
        android:id="@+id/fav_item"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_star"/>
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/notifications_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
